tests/snapshots/files__add_block_indirection-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:

block:
 v0: int = const 1;
block:
 v1: int = const 2;
 v2: int = add v0 v1;
block:
 print v2;
 return

}
