tests/snapshots/files__add_naiive.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  v0: int = const 1;
  v1: int = const 2;
  v2: int = const 3;
  v0_: int = const 3;
  print v0_;
  ret;
.sblock___0:
.exit___:
}

