tests/snapshots/files__block-diamond-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 2;
  v2_: bool = lt v0 c1_;
  c3_: int = const 0;
  c4_: int = const 1;
  c5_: int = const 5;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: bool = lt v0 c5_;
  v9_: int = add c1_ c3_;
  c10_: bool = const false;
  v11_: int = id v9_;
  v12_: int = id c4_;
  v13_: int = id c1_;
  v14_: bool = id c10_;
  br v8_ .b15_ .b16_;
.b15_:
  v17_: int = add c1_ v9_;
  c18_: bool = const true;
  v11_: int = id v17_;
  v12_: int = id c4_;
  v13_: int = id c1_;
  v14_: bool = id c18_;
  v19_: int = id v11_;
  v20_: int = id v12_;
  v21_: int = id v13_;
  v22_: bool = id v14_;
  v23_: int = id c4_;
  v24_: int = id v19_;
  v25_: int = add c4_ v24_;
  print v25_;
  ret;
  jmp .b26_;
.b16_:
  v19_: int = id v11_;
  v20_: int = id v12_;
  v21_: int = id v13_;
  v22_: bool = id v14_;
  v23_: int = id c4_;
  v24_: int = id v19_;
  v27_: int = add c1_ v19_;
  v23_: int = id c4_;
  v24_: int = id v27_;
  v25_: int = add c4_ v24_;
  print v25_;
  ret;
  jmp .b26_;
.b7_:
  v28_: int = add c3_ c4_;
  c29_: bool = const false;
  v19_: int = id v28_;
  v20_: int = id c4_;
  v21_: int = id c1_;
  v22_: bool = id c29_;
  v23_: int = id c4_;
  v24_: int = id v19_;
  br v22_ .b30_ .b31_;
.b30_:
  v25_: int = add c4_ v24_;
  print v25_;
  ret;
  jmp .b26_;
.b31_:
  v27_: int = add c1_ v19_;
  v23_: int = id c4_;
  v24_: int = id v27_;
  v25_: int = add c4_ v24_;
  print v25_;
  ret;
.b26_:
}
