tests/snapshots/files__block-diamond_structured.snap
---
source: tests/files.rs
expression: "format!(\"{}\", structured)"
---
main {
block:
 block:
  block:
   block:
    one: int = const 1;
    two: int = const 2;
    x: int = const 0;
    a_cond: bool = lt one two;
    if a_cond:
     break 2
    else:
     break 1
   x: int = add x one;
   break 1
  block:
   b_cond: bool = lt two one;
   x: int = add x two;
   if b_cond:
    break 1
   else:
    break 2
  x: int = add x two;
  break 1
 x: int = add x two;
block:
 x: int = add x one;
 return

}
